@@ -1,6 +1,6 @@
 \NewEntry 0 GUI
 
-\CurrentEntry 1 Widgets
+\NewEntry 1 Widgets
 <html><head><meta name="qrichtext" content="1" /></head><body style="font-size:10pt;font-family:Sans Serif">
 <p><span style="font-weight:600">Widgets available in Kommander</span></p>
 <ul type="disc"><div></div>
@@ -84,7 +84,7 @@
 </body></html>
 
 
-\NewEntry 0 Bugs
+\CurrentEntry 0 Bugs
 <html><head><meta name="qrichtext" content="1" /></head><body style="font-size:10pt;font-family:Sans Serif">
 <p><span style="font-weight:600">Various bugs to be fixed</span></p>
 <ul type="disc"><li>Charset is sometimes incorrectly converted from/to local charset</li>
@@ -92,7 +92,8 @@
 <li>check the *pid functions in the new parser</li>
 <li>hide what is not available in the Function Browser for the old parser</li>
 <li>Labels do not show up unless you edit their text</li>
-<li>toolbox editing is ugly after group layout is applied. Goes back to normal if the dialog is reloaded.</li></ul>
+<li>toolbox editing is ugly after group layout is applied. Goes back to normal if the dialog is reloaded.</li>
+<li>toolbox cannot be moved in the editor</li></ul>
 </body></html>
 
 
