@@ -1,4 +1,5 @@
 kmdr_editordir = ${kde_datadir}/kommander/pics
 
-kmdr_editor_DATA = kommandersplash.png toolbox.png
+kmdr_editor_DATA = kommandersplash.png toolbox.png khsselector.png
+
 
