@@ -15,17 +15,18 @@ libkommanderwidgets_la_LIBADD  = $(LIB_KIO) $(LIB_QT) \
 
 # which sources should be compiled for widgets
 libkommanderwidgets_la_SOURCES = buttongroup.cpp checkbox.cpp closebutton.cpp \
-	combobox.cpp datepicker.cpp dialog.cpp execbutton.cpp fileselector.cpp \
+	colordialog.cpp combobox.cpp datepicker.cpp dialog.cpp execbutton.cpp fileselector.cpp \
 	groupbox.cpp	lineedit.cpp konsole.cpp label.cpp listbox.cpp pixmaplabel.cpp plugin.cpp \
 	popupmenu.cpp progressbar.cpp radiobutton.cpp richtexteditor.cpp scriptobject.cpp \
 	slider.cpp spinboxint.cpp statusbar.cpp subdialog.cpp table.cpp tabwidget.cpp \
 	textbrowser.cpp textedit.cpp timer.cpp toolbox.cpp treewidget.cpp wizard.cpp
 
 # these are the headers for your project that won't be installed
-noinst_HEADERS = buttongroup.h checkbox.h closebutton.h combobox.h dialog.h	 \
-	execbutton.h fileselector.h groupbox.h	 label.h lineedit.h listbox.h pixmaplabel.h \
-	popupmenu.h radiobutton.h	 richtexteditor.h scriptobject.h spinboxint.h statusbar.h \
-	subdialog.h tabwidget.h textbrowser.h textedit.h toolbox.h treewidget.h wizard.h
+noinst_HEADERS = buttongroup.h checkbox.h closebutton.h colordialog.h \
+	combobox.h dialog.h	 execbutton.h fileselector.h groupbox.h	 label.h lineedit.h \
+	listbox.h pixmaplabel.h popupmenu.h radiobutton.h	 richtexteditor.h \
+	scriptobject.h spinboxint.h statusbar.h subdialog.h tabwidget.h textbrowser.h \
+	textedit.h toolbox.h treewidget.h wizard.h
 
 # let automoc handle all of the meta source files (moc)
 METASOURCES = AUTO
